Add & wire Book and Poem entities

--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,8 @@ Options +SymLinksIfOwnerMatch
 RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^tvorchestvo/([^/]+)/?$            public/poem.php?book=$1            [QSA,L]
+RewriteRule ^tvorchestvo/([^/]+)/([^/]+)/?$    public/poem.php?book=$1&poem=$2    [QSA,L]
 RewriteRule ^(.*)$    public/$1     [L]
 
 # use a custom 404 page
