--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
-        "doctrine/orm": "^2.7"
+        "doctrine/orm": "^2.7",
+        "phpmailer/phpmailer": "^6.2"
     }
 }
