Introduce & wire Search functionality

--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,7 @@ RewriteRule ^tvorchestvo/([^/]+)/?$            public/poem.php?book=$1          
 RewriteRule ^tvorchestvo/([^/]+)/([^/]+)/?$    public/poem.php?book=$1&poem=$2    [QSA,L]
 RewriteRule ^video/([^/]+)/?$                  public/video.php?video=$1          [QSA,L]
 RewriteRule ^galeriya/?$                       public/gallery.php                 [QSA,L]
+RewriteRule ^tarsene/?$                        public/search.php                  [QSA,L]
 RewriteRule ^(.*)$    public/$1     [L]
 
 # use a custom 404 page
