Add & wire Contact page

--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,7 @@ RewriteRule ^tvorchestvo/([^/]+)/([^/]+)/?$    public/poem.php?book=$1&poem=$2  
 RewriteRule ^video/([^/]+)/?$                  public/video.php?video=$1          [QSA,L]
 RewriteRule ^galeriya/?$                       public/gallery.php                 [QSA,L]
 RewriteRule ^tarsene/?$                        public/search.php                  [QSA,L]
+RewriteRule ^kontakt/?$                        public/contact.php                 [QSA,L]
 RewriteRule ^(.*)$    public/$1     [L]
 
 # use a custom 404 page
