--- a/.htaccess
+++ b/.htaccess
@@ -18,6 +18,14 @@ RewriteRule ^tarsene/?$                        public/search.php                
 RewriteRule ^kontakt/?$                        public/contact.php                 [QSA,L]
 RewriteRule ^presa/([^/]+)/?$                  public/press.php?article=$1        [QSA,L]
 RewriteRule ^za-yosif-petrov/([^/]+)/?$        public/essay.php?essay=$1          [QSA,L]
+
+# previously all pages used cyrillic characters in their URLs
+# so for every request starting with cyrillic character load up the redirector
+# which will either 301 redirect to the new address (if any) or show error 404
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^[А-Яа-я]+                         public/redirector.php              [QSA,L] 
+
+# for all other cases redirect to the public/ folder
 RewriteRule ^(.*)$    public/$1     [L]
 
 # use a custom 404 page
