--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,17 @@ Options +SymLinksIfOwnerMatch
 RewriteEngine on
 
 
+# Remove leading www
+RewriteCond %{HTTP_HOST} ^www\.(yosifpetrov\.com)$ [NC]
+RewriteRule ^(.*)$ https://%1%{REQUEST_URI} [R=301,L]
+
+
+# Redirect http to https
+RewriteCond %{HTTPS} !on [NC]
+RewriteCond %{HTTP_HOST} ^yosifpetrov\.com$ [NC]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+
 # remove trailing slash
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} (.+)/$
