--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "smarty/smarty": "^3.1",
         "doctrine/orm": "^2.7",
         "phpmailer/phpmailer": "^6.2"
     }
