--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "smarty/smarty": "^3.1",
         "doctrine/orm": "^2.7",
-        "phpmailer/phpmailer": "^6.2"
+        "phpmailer/phpmailer": "^6.2",
+        "mobicms/captcha": "^1.0"
     }
 }
