Fix navigation data not being loaded when throwing exceptions on prod env

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "autoload": {
         "classmap": [
             "src/models/doctrine/src/",
-            "src/controllers/abstract/",
+            "src/controllers/base/",
             "src/core/"
         ],
         "files": [
