--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,7 +15,12 @@
     RewriteRule ^ %1 [L,R=301]
 
     # Send Requests To Front Controller...
-    RewriteCond %{REQUEST_FILENAME} !-d
+    # RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # admin resources are stored in the /public/admin folder,
+    # but calling /admin should not try to list the contents
+    # of that folder, but rather process it as a route
+    # hence, directory RewriteCond above is switched off
 </IfModule>
