--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
+    "name": "ypetrov",
+    "description": "A website in memory of the famous Bulgarian poet Yosif Petrov",
+    "homepage": "https://yosifpetrov.com",
+    "author": "Christo Yovev <yovev@xroads-bg.com>",
+    "version": "1.0.0",
     "private": true,
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
+    "dependencies": {
+        "less": "^4.2.0",
+        "less-loader": "^11.1.3",
+        "laravel-mix": "^6.0.49"
+    },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
-    }
+    },
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/chyovev/ypetrov.git"
+    },
+    "keywords": [],
+    "license": "ISC"
 }
