Copy Less stylesheet from main branch (alongside images and fonts), split it into smaller chunks & add them to the Laravel mix webpack

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /.phpunit.cache
 /node_modules
 /public/build
+/public/css
+/public/fonts
 /public/hot
+/public/images
+/public/js
 /public/storage
 /public/attachments
 /storage/*.key
