--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
         "build": "vite build"
     },
     "dependencies": {
+        "jquery": "^3.7.1",
+        "laravel-mix": "^6.0.49",
         "less": "^4.2.0",
         "less-loader": "^11.1.3",
-        "laravel-mix": "^6.0.49"
+        "magnific-popup": "^1.1.0",
+        "swipejs": "^2.3.1"
     },
     "devDependencies": {
         "axios": "^1.1.2",
