--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,9 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
+        "post-install-cmd": [
+            "@php -r \"file_exists('.env.testing') || copy('.env.example', '.env.testing');\""
+        ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
